Converting logo to outlines

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar">
   <div class="navbar__inner">
     <div class="navbar__logo">
-      <%= image_tag asset_url('logo-dark.svg') %>
+      <%= image_tag asset_url('logo-dark.svg'), alt: 'Roast dot reviews' %>
     </div>
     <nav class="navbar__nav">
       <ul>
