--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,13 @@
-<h1>Brew.review</h1>
+<section>
+  <header class="header header--roaster">
+    <div class="header__inner">
+      <h1 class="header__title">We love cofee.</h1>
+    </div>
+  </header>
+
+  <div class="container">
+    <p class="lead">The best way to find new roasters and remember your favourite bags of beans.</p>
+    <p>Share flavour profiles and find new coffee that matches your taste.</p>
+    <%= link_to "Sign up", new_registration_path('user'), class: 'button' %>
+  </div>
+</section
