--- a/app/views/roasters/index.html.erb
+++ b/app/views/roasters/index.html.erb
@@ -2,10 +2,12 @@
   <h1>Roasters</h1>
   <% @roasters.each do |roaster| %>
     <div class="card">
-      <div class="type">
-        <h2><%= link_to roaster.name, roaster %></h2>
-        <p><%= roaster.location %></p>
-        <p class="lead"><%= roaster.description %></p>
+      <div class="card__body">
+        <div class="type">
+          <h2><%= link_to roaster.name, roaster %></h2>
+          <p><%= roaster.location %></p>
+          <p class="lead"><%= roaster.description %></p>
+        </div>
       </div>
     </div>
   <% end %>
