Fix card layout

--- a/app/views/beans/show.html.erb
+++ b/app/views/beans/show.html.erb
@@ -8,13 +8,15 @@
 
   <div class="container">
     <div class="card">
-      <div>
+      <div class="card__image">
         <%= image_tag @bean.image.thumb('200x200#').url if @bean.image_stored? %>
       </div>
-      <div class="type">
-        <p class="lead"><%= @bean.description %></p>
-        <p><%= @bean.roast %> roast</p>
-        <p>Average rating: <%= @bean.average_rating %></p>
+      <div class="card__body"
+        <div class="type">
+          <p class="lead"><%= @bean.description %></p>
+          <p><%= @bean.roast %> roast</p>
+          <p>Average rating: <%= @bean.average_rating %></p>
+        </div>
       </div>
     </div>
 
