--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,6 +8,6 @@
   <div class="container">
     <p class="lead">The best way to find new roasters and remember your favourite bags of beans.</p>
     <p>Share flavour profiles and find new coffee that matches your taste.</p>
-    <%= link_to "Sign up", new_registration_path('user'), class: 'button' %>
+    <%= link_to "View beans", beans_path, class: 'button' %>
   </div>
 </section
